2008-05-19  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt, avogadro/src/CMakeLists.txt: Added -DQT_NO_DEBUG to
	release mode and removed a -DQT_DEBUG in the Avogadro app build file.

	* libavogadro/src/engines/CMakeLists.txt,
	libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/tools/CMakeLists.txt: Changed build scripts to build
	all plugins as modules, this seems more appropriate after reading the
	CMake man page and should decrease build times due to less linkage.

2008-05-17  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/CMakeLists.txt, libavogadro/src/CMakeLists.txt: Add the
	OpenBabel library directory to the linker path.

	* CMakeLists.txt: Respect the users CXXFLAGS.

	* libavogadro/src/tools/clickmeasuretool.*: Add some caching in the
	tool so measurements are only echoed once.

	* avogadro/src/mainwindow.ui: Tweaks to the UI.

2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Propagate new grids
	through to the combo and some UI cleanup.

2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/iso.cpp: Surfaces are now centered around atom
	again. The - 0.5 * m_stepSize correction is only needed for 
	vMarchCube1(float,float,float). This is a bug in OBFloatGrid? 

2008-05-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.*: Use new
	OBForceField::SetIgnoreAtom() to make sure the new atom doesn't push
	away other fragment you want to connect with. Also fix the atom when
	you hit an atom that already exists. This makes drawing rings with
	AutoOpt enabled really easy.

	* libavogadro/src/autoopttool.*: Use new OBForceField::SetFixAtom()

	* libavogadro/src/extensions/animationdialog.ui: Make the dialog
	more compact. Removed the group boxes.

2008-05-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/autorotatetool.cpp, 